--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ project(planning
 )
 
 set(CMAKE_CXX_STANDARD 17)
+enable_testing()
 
 # 变量设置
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
@@ -28,3 +29,4 @@ link_directories(${CMAKE_SOURCE_DIR}/third_party/easyx)
 
 # 添加子目录
 add_subdirectory(src)
+add_subdirectory(test)
